VAPI-8237 переход на GV API 1.8.0
